--- a/index.html
+++ b/index.html
@@ -588,6 +588,12 @@ letter-spacing: 5px;
     .frame1{
       margin: 40px;
     }
+		  footer form{
+      gap: 40px;
+    }
+    #auto{
+      row-gap: 60px;
+    }
         }
     </style>
 </head>
