--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,12 @@ letter-spacing: 5px;
         <h3>Kodinar,Shedhaya</h3>
         <h3>Phone: +91 1234567890</h3>
         <h3>Email: Mail@gmail.com</h3>
+	       <div class="india">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+      
+        <i class="fa-brands fa-youtube"></i>
+        </div>
       </div>
       <div class="footer3">
         <p>Send Me a Message:</p>
