--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       width: 100%;
       padding-top: 50px;
       padding-bottom: 50px;
-      background-color:#ffffff1b;
+    
     }
 
     .swiper-slide {
@@ -510,7 +510,7 @@ letter-spacing: 5px;
 
 
 
-        @media only screen and (max-width:600px){
+        @media only screen and (min-width:767px){
             nav .fa-solid{
         display: block;
         font-size: 25px;
